# bazel-buildbarn

./: WORKSPACE
cmd/bbb_browser/templates/: view_command.html
cmd/bbb_cas/: BUILD.bazel  main.go
cmd/bbb_redis_server/: BUILD.bazel  main.go
cmd/bbb_worker/: main.go
pkg/blobstore/: BUILD.bazel  filesystem_backed_blob_access.go  redis_server.go
pkg/blobstore/circular/: BUILD.bazel  circular_blob_access.go  data_store.go  file_data_store.go  file_offset_store.go  file_state_store.go  offset_store.go  state_store.go
pkg/blobstore/configuration/: create_blob_access.go
pkg/proto/blobstore/: blobstore.proto
pkg/util/: read_writer_at.go
