load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/EdSchouten/bazel-buildbarn/cmd/bbb_redis_server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/blobstore/circular:go_default_library",
    ],
)

go_binary(
    name = "bbb_redis_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
